--- a/ios/CrossMusicP/Info.plist
+++ b/ios/CrossMusicP/Info.plist
@@ -74,6 +74,12 @@
 		<string>rubicon-icon-font.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Ubuntu-Regular.ttf</string>
+		<string>Abel-Regular.ttf</string>
+		<string>BarlowSemiCondensed-Medium.ttf</string>
+		<string>BarlowSemiCondensed-Regular.ttf</string>
+		<string>Oswald-Regular.ttf</string>
+		<string>Oswald-VariableFont_wght.ttf</string>
 	</array>
 </dict>
 </plist>
